# sdl3_vulkan_luajit

./: CMakeLists.txt  README.md  build.bat  main.lua  run.bat  shader.bat
docs/: cheatsheet_api.md  loop.md  lua_5_1.md
examples/: main01.lua
include/: sdl3_luajit.h  sdl_luajit.h  vulkan_luajit.h
shaders/: triangle.frag  triangle.vert
src/: main.c  sdl3_luajit.c  sdl_luajit.c  test.c  vulkan_luajit.c
